<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_store"
                android:icon="@drawable/profile"
                android:title="@string/profile" />
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/settings"
                android:title="@string/settings" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                    android:id="@+id/nav_contactmail"
                    android:icon="@drawable/about_us"
                    android:title="@string/about_us" />
            <item
                    android:id="@+id/nav_contactphone"
                    android:icon="@drawable/contact_us"
                    android:title="@string/contact_us" />
        </menu>
    </item>
</menu>